Revise portfolio item 2 with new analysis details
Updated portfolio item details including title, excerpt, and content.

--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -1,7 +1,23 @@
 ---
-title: "Portfolio item number 2"
-excerpt: "Short description of portfolio item number 2 <br/><img src='/images/500x300.png'>"
+title: "Carbon Pricing & Trade"
+excerpt: "Empirical analysis of how carbon pricing and CBAM affect trade in energy-intensive, trade-exposed sectors."
 collection: portfolio
 ---
 
-This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+### Overview
+
+Analysed sector-level trade and carbon pricing data to explore how carbon taxes
+and the EU ETS/CBAM affect exports in energy-intensive, trade-exposed sectors.
+
+### What I did
+
+- Merged trade data with carbon pricing indicators across multiple jurisdictions.
+- Built sector-level panels and visualised trends in carbon prices vs exports.
+- Explored differences between covered vs non-covered sectors.
+- Summarised findings for coursework / dissertation work.
+
+### Methods & tools
+
+- **Econometrics / stats:** panel data analysis, visualisation  
+- **Software:** R / Python (pandas, ggplot / matplotlib)  
+- **Data:** trade flows, World Bank Carbon Pricing Dashboard, EU ETS / CBAM info
